--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-about></app-about>
-<app-experience></app-experience>
+<div>
+  <router-outlet></router-outlet>
+</div>
