--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,7 +1,30 @@
 <header>
   <div class="container">
     <div class="row align-items-center" id="name">
-      <div class="col"><p>Adrián Fernández Fazio</p></div>
+      <div class="col">
+        <img
+          src="assets/Img/logo_argentina_programa.png"
+          alt="Logo Argentina programa"
+          width="120"
+        />
+        <div class="yo_programo">#YoProgramo</div>
+      </div>
+      <div class="col">
+        <button
+          type="button"
+          class="btn btn-outline-light float-end social btn-sm align-baseline ms-5"
+        >
+          Login
+        </button>
+        <i class="bi bi-facebook float-end social px-1"></i>
+        <i class="bi bi-instagram float-end social px-1"></i>
+        <i class="bi bi-youtube float-end social px-1"></i>
+        <i class="bi bi-linkedin float-end social px-1"></i>
+        <i class="bi bi-github float-end social px-1"></i>
+      </div>
+    </div>
+    <div class="row align-items-top">
+      <img src="assets/Img/banner.png" alt="Banner" width="100%" />
     </div>
   </div>
 </header>
