Frontend Mockup in Angular

--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -1,26 +1,29 @@
 <div class="container">
   <div class="row align-items-top">
-    <div class="col-7">
-      <p class="big">
-        <span class="short">I'm </span>Adrián Fernández,<br />
-        <span class="short">currently living in</span><br />
-        Buenos Aires, Argentina.<br />
-        <span class="short">I'm a </span
-        ><span class="big">Full Stack Jr.</span>
-        <span class="short">
-          developer<br />
-          implementing </span
-        ><span class="big">solutions</span><br />
-        <span class="short">for the web.</span><br />
-      </p>
-    </div>
-
-    <div class="col-5">
+    <div class="col-4 d-flex mt-4 justify-content-center">
       <img
-        src="../assets/Img/foto perfil 1.png"
-        class="rounded float-left"
+        width="200"
+        height="200"
+        src="../assets/Img/imagen_portfolio.jpg"
+        class="rounded-circle"
         alt="Foto perfil"
       />
+    </div>
+
+    <div class="col-7 d-flex mt-4 align-items-center">
+      <p class="big">
+        <span class="titles">Acerca de</span><br />
+        <span class="short">Soy </span>Adrián Fernández Fazio,
+        <span class="short">actualmente residiendo en</span><br />
+        Buenos Aires, Argentina.<br />
+        <span class="short">Soy </span><span class="big">Full Stack Jr.</span>
+        <span class="short"> developer, implementando </span
+        ><span class="big">soluciones </span>
+        <span class="short">para la web.</span><br />
+      </p>
+    </div>
+    <div class="col-1 mt-4">
+      <i class="bi bi-pencil-fill float-end social px-1"></i>
     </div>
   </div>
 </div>
