--- a/portfolio/src/app/components/education/education.component.html
+++ b/portfolio/src/app/components/education/education.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row align-items-top">
-    <div class="titles col-4">Experiencia:</div>
+    <div class="titles col-4">Educación:</div>
     <div class="col-7"></div>
     <div class="col-1">
       <i class="bi bi-plus-lg float-end social px-1"></i>
