--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <div class="row align-items-center" id="name">
+    <div class="row align-items-center">
       <div class="col">
         <img
           src="assets/Img/logo_argentina_programa.png"
@@ -23,8 +23,6 @@
         <i class="bi bi-github float-end social px-1"></i>
       </div>
     </div>
-    <div class="row align-items-top">
-      <img src="assets/Img/banner.png" alt="Banner" width="100%" />
-    </div>
+    <img src="assets/Img/banner.png" alt="Banner" width="100%" />
   </div>
 </header>
