--- a/portfolio/src/app/components/portfolio/portfolio.component.html
+++ b/portfolio/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
 <app-about></app-about>
 <app-experience></app-experience>
+<app-education></app-education>
+<app-skill></app-skill>
+<app-language></app-language>
+<app-projects></app-projects>
