--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
-  background-color: #2d79bf;
+  background-color: #022b2c;
 }
 
 p {
@@ -11,12 +11,22 @@ p {
   display: table-cell;
 }
 
-#login {
-  color: grayscale(100%);
+h2 {
+  color: white;
+}
+
+.row-top-margin {
+  margin-top: 0px;
 }
 
 .social {
   font-size: 1.5rem;
+  color: white;
+}
+
+.social-skill {
+  font-size: 1rem;
+  color: white;
 }
 
 .container {
@@ -26,37 +36,54 @@ p {
   top: 0px;
 }
 
+/* fonts */
+
+.titles {
+  font-size: 30px;
+  font-weight: bold;
+  color: rgb(221, 117, 32);
+}
+
 .big {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: bold;
 }
 
 .short {
-  font-size: 35px;
+  font-size: 20px;
   font-weight: bold;
+  color: white;
 }
 
 .small {
   font-style: normal;
-  font-size: 24px;
+  font-size: 15px;
   line-height: 280%;
+  color: white;
 }
 .small-normal-line-height {
   font-style: normal;
-  font-size: 24px;
+  font-size: 15px;
   line-height: 100%;
   padding-bottom: 50px;
 }
 
 .smallest {
   font-style: normal;
-  font-size: 18px;
+  font-size: 12px;
   line-height: 280%;
 }
 .smallest-pad {
   font-style: normal;
-  font-size: 18px;
+  font-size: 12px;
   padding-left: 30px;
+}
+
+.skill {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
 }
 
 .vertical-line {
@@ -77,10 +104,6 @@ p {
   margin-top: 0px;
   padding-top: 0px;
   padding-left: 0px;
-}
-
-#name {
-  height: 250px;
 }
 
 #separator {
@@ -133,11 +156,131 @@ p {
   font-family: sans-serif;
   font-size: medium;
   color: white;
-  background-color: blue;
-  background-image: linear-gradient(to right, blue, rgb(0, 162, 255));
+  background-color: rgb(0, 255, 179);
+  background-image: linear-gradient(to right, rgb(56, 70, 70), rgb(14, 61, 59));
   border-radius: 12px;
   display: inline-flex;
   align-items: center;
   height: 30px;
   width: 80px;
+}
+
+/* Progress bar */
+
+.progress {
+  width: 150px;
+  height: 150px !important;
+  float: left;
+  line-height: 150px;
+  background: none;
+  margin: 20px;
+  box-shadow: none;
+  position: relative;
+}
+.progress:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 12px solid #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.progress > span {
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+.progress .progress-left {
+  left: 0;
+}
+.progress .progress-bar {
+  width: 100%;
+  height: 100%;
+  background: none;
+  border-width: 12px;
+  border-style: solid;
+  position: absolute;
+  top: 0;
+}
+.progress .progress-left .progress-bar {
+  left: 100%;
+  border-top-right-radius: 80px;
+  border-bottom-right-radius: 80px;
+  border-left: 0;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+.progress .progress-right {
+  right: 0;
+}
+.progress .progress-right .progress-bar {
+  left: -100%;
+  border-top-left-radius: 80px;
+  border-bottom-left-radius: 80px;
+  border-right: 0;
+  -webkit-transform-origin: center right;
+  transform-origin: center right;
+  animation: loading-1 1.8s linear forwards;
+}
+.progress .progress-value {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  background: 022b2c;
+  font-size: 24px;
+  color: #fff;
+  line-height: 135px;
+  text-align: center;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+.progress.orange .progress-bar {
+  border-color: rgb(221, 117, 32);
+}
+.progress.orange .progress-left .progress-bar {
+  animation: loading-2 1.5s linear forwards 1.8s;
+}
+
+.progress.green .progress-bar {
+  border-color: rgb(7, 87, 24);
+}
+.progress.green .progress-left .progress-bar {
+  animation: loading-2 1.5s linear forwards 1.8s;
+}
+
+@keyframes loading-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+}
+@keyframes loading-2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(144deg);
+    transform: rotate(144deg);
+  }
+}
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
 }
