--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row align-items-top">
-    <div class="titles col-4">Experiencia:</div>
-    <div class="col-7"></div>
-    <div class="col-1">
-      <i class="bi bi-plus-lg float-end social px-1"></i>
-    </div>
+    <div class="col-1"></div>
+    <div class="titles col-3">Experiencia:</div>
+    <div class="col-6"></div>
+    <div class="col-1"></div>
   </div>
   <div class="row align-items-top">
-    <div class="col-4">
+    <div class="col-1"></div>
+    <div class="col-3">
       <img
         src="../assets/Img/computer_coffee.png"
         class="rounded float-left"
@@ -17,10 +17,118 @@
       />
     </div>
     <!-- <div class="col-7 smallest">{{ experience.title }}</div> -->
-    <div class="col-7">TODO</div>
+    <div class="col-6">TODO</div>
     <div class="col-1">
       <i class="bi bi-trash float-end social px-1"></i>
-      <i class="bi bi-pencil-fill float-end social px-1"></i>
+      <button
+        *ngIf="userAuthenticated"
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#experienceModal"
+      >
+        <i class="bi bi-pencil-fill float-end social px-1"></i></button
+      ><!-- Modal -->
+      <div
+        class="modal fade"
+        id="experienceModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Editar Experiencia
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form [formGroup]="formExperience">
+                <div class="mb-3">
+                  <label for="experienceName" class="form-label"
+                    >Empresa y posición</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="experienceName"
+                    formControlName="experienceName"
+                    aria-describedby="experienceNameHelp"
+                  />
+                  <div
+                    *ngIf="
+                      experienceName?.invalid &&
+                      (experienceName?.dirty || experienceName?.touched)
+                    "
+                  >
+                    <div
+                      *ngIf="experienceName?.errors?.['required']"
+                      class="text-danger"
+                    >
+                      Este campo es requerido
+                    </div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="experienceImage" class="form-label"
+                    >Url del logo</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="experienceImage"
+                    formControlName="experienceImage"
+                    aria-describedby="experienceImageHelp"
+                  />
+                  <div
+                    *ngIf="
+                      experienceImage?.invalid &&
+                      (experienceImage?.dirty || experienceImage?.touched)
+                    "
+                  >
+                    <div
+                      *ngIf="experienceImage?.errors?.['required']"
+                      class="text-danger"
+                    >
+                      La url del logo es requerida
+                    </div>
+                    <div
+                      *ngIf="experienceImage?.errors?.['pattern']"
+                      class="text-danger"
+                    >
+                      El formato de la url es inválido
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+                id="closeExperienceModal"
+              >
+                Cerrar
+              </button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="saveExperience()"
+              >
+                Guardar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- </div> -->
   </div>
