--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,13 +1,15 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row align-items-top">
-    <div class="titles col-4">Proyectos:</div>
-    <div class="col-7"></div>
+    <div class="col-1"></div>
+    <div class="titles col-3">Proyectos:</div>
+    <div class="col-6"></div>
     <div class="col-1">
       <i class="bi bi-plus-lg float-end social px-1"></i>
     </div>
   </div>
   <div class="row align-items-top">
-    <div class="col-4">
+    <div class="col-1"></div>
+    <div class="col-3">
       <img
         src="../assets/Img/computer_coffee.png"
         class="rounded float-left"
@@ -17,7 +19,7 @@
       />
     </div>
     <!-- <div class="col-7 smallest">{{ experience.title }}</div> -->
-    <div class="col-7">TODO</div>
+    <div class="col-6">TODO</div>
     <div class="col-1">
       <i class="bi bi-trash float-end social px-1"></i>
       <i class="bi bi-pencil-fill float-end social px-1"></i>
