--- a/portfolio/src/app/components/skill/skill.component.html
+++ b/portfolio/src/app/components/skill/skill.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row align-items-top">
-    <div class="titles col-4">Hard & Soft Skills:</div>
-    <div class="col-7"></div>
+    <div class="col-1"></div>
+    <div class="titles col-3">Hard & Soft Skills:</div>
+    <div class="col-6"></div>
     <div class="col-1">
       <i class="bi bi-plus-lg float-end social px-1"></i>
     </div>
