--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -3,16 +3,16 @@ body {
   background-color: #022b2c;
 }
 
+hr {
+  color: aquamarine;
+  width: 100%;
+}
 p {
-  color: #fff;
-  font-family: "Roboto", sans-serif;
+  color: gray;
+  font-family: "Consolas", monospace;
   text-align: left;
   vertical-align: middle;
   display: table-cell;
-}
-
-h2 {
-  color: white;
 }
 
 .row-top-margin {
@@ -21,12 +21,17 @@ h2 {
 
 .social {
   font-size: 1.5rem;
-  color: white;
+  color: rgba(243, 237, 237, 0.925);
 }
 
 .social-skill {
   font-size: 1rem;
-  color: white;
+  color: rgba(243, 237, 237, 0.925);
+}
+
+.btn {
+  background-color: #022b2c !important;
+  border: none;
 }
 
 .container {
@@ -39,27 +44,26 @@ h2 {
 /* fonts */
 
 .titles {
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 25px;
   color: rgb(221, 117, 32);
+  font-family: "Consolas", monospace;
 }
 
 .big {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
 }
 
 .short {
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
+  font-size: 18px;
+  color: gray;
 }
 
 .small {
   font-style: normal;
   font-size: 15px;
   line-height: 280%;
-  color: white;
+  color: gray;
 }
 .small-normal-line-height {
   font-style: normal;
@@ -82,7 +86,7 @@ h2 {
 .skill {
   font-size: 20px;
   font-weight: bold;
-  color: white;
+  color: rgba(243, 237, 237, 0.925);
   text-align: center;
 }
 
@@ -152,7 +156,7 @@ h2 {
   padding-bottom: 20px;
 }
 
-.btn {
+.login {
   font-family: sans-serif;
   font-size: medium;
   color: white;
@@ -163,6 +167,14 @@ h2 {
   align-items: center;
   height: 30px;
   width: 80px;
+}
+
+.ng-valid:not(form).ng-touched{
+  border-left: 5px solid #42A948;
+}
+
+.ng-invalid:not(form).ng-touched{
+  border-left: 5px solid #a94442;
 }
 
 /* Progress bar */
